# yew_exp

./: .gitignore  Cargo.toml  README.md  index.html  justfile
src/: main.rs
src/components/: navbar.rs
src/pages/: contact.rs  home.rs
