[package]
authors = ["fitzypop fitzypop@pm.me"]
categories = ["web app", "wasm", "yew"]
description = "My Yew Playground"
edition = "2021"
license = "Unlicense"
name = "exp-yew"
readme = "./README.md"
repository = "https://github.com/fitzypop/exp-yew"
version = "0.1.0"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
